# pii_redaction_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  diff.txt  inference.py  models.py  openenv.yaml  pre_val.sh  pyproject.toml  requirements.txt  sample_inference_script.py  test_output.txt  utils.py
.github/workflows/: ci.yml
openenv_pii_redaction_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
outputs/: pre_val_output.txt  summary_20260407_141744.json  summary_20260408_142551.json  summary_20260408_142811.json  summary_20260408_145049.json  summary_20260408_191326.json  summary_20260408_213906.json
scripts/: baseline.py
server/: Dockerfile  app.py  graders.py  pii_redaction_env_environment.py  requirements.txt
server/data/: __init__.py  easy_docs.json  hard_docs.json
server/src/: __init__.py  environment.py  graders.py  tasks.py
src/: __init__.py  environment.py  graders.py  models.py  tasks.py
src/data/: easy_docs.json  hard_docs.json  medium_docs.json
tests/: test_env.py  test_graders.py  test_models.py
